Sort algorithms benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(cppbenchmark ${SOURCE_FILES})
 # Examples
 add_executable(cppbenchmark-example-fwrite examples/fwrite.cpp)
 target_link_libraries(cppbenchmark-example-fwrite cppbenchmark)
+add_executable(cppbenchmark-example-sort examples/sort.cpp)
+target_link_libraries(cppbenchmark-example-sort cppbenchmark)
 add_executable(cppbenchmark-example-stl-containers-insert examples/stl_containers_insert.cpp)
 target_link_libraries(cppbenchmark-example-stl-containers-insert cppbenchmark)
 
