Add Visual Studio 2015 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,32 +4,13 @@ project(cppbenchmark)
 # Compiler features
 include(cmake/SetCompilerFeatures.cmake)
 include(cmake/SetCompilerWarningAll.cmake)
+include(cmake/SetCrtSecureWarningsOff.cmake)
 
 # Library
 include_directories(include)
-set(SOURCE_FILES
-    source/benchmark.cpp
-    source/benchmark_threads.cpp
-    source/context.cpp
-    source/context_thread.cpp
-    source/fixture.cpp
-    source/fixture_threads.cpp
-    source/environment.cpp
-    source/launcher.cpp
-    source/launcher_console.cpp
-    source/option_parser.cpp
-    source/phase.cpp
-    source/phase_core.cpp
-    source/phase_metrics.cpp
-    source/phase_scope.cpp
-    source/reporter.cpp
-    source/reporter_console.cpp
-    source/reporter_csv.cpp
-    source/reporter_json.cpp
-    source/settings.cpp
-    source/settings_threads.cpp
-    source/system.cpp)
-add_library(cppbenchmark ${SOURCE_FILES})
+file(GLOB_RECURSE HEADER_FILES "source/*.h")
+file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
+add_library(cppbenchmark ${HEADER_FILES} ${SOURCE_FILES})
 
 # Examples
 add_executable(cppbenchmark-example-containers examples/containers.cpp)
@@ -42,13 +23,9 @@ add_executable(cppbenchmark-example-threads examples/threads.cpp)
 target_link_libraries(cppbenchmark-example-threads cppbenchmark)
 
 # Tests
-set(TESTS_SOURCE_FILES
-    tests/catch.cpp
-    tests/test_environment.cpp
-    tests/test_launcher.cpp
-    tests/test_reporter.cpp
-    tests/test_system.cpp)
-add_executable(cppbenchmark-tests ${TESTS_SOURCE_FILES})
+file(GLOB_RECURSE TESTS_HEADER_FILES "tests/*.h")
+file(GLOB_RECURSE TESTS_SOURCE_FILES "tests/*.cpp")
+add_executable(cppbenchmark-tests ${TESTS_HEADER_FILES} ${TESTS_SOURCE_FILES})
 target_link_libraries(cppbenchmark-tests cppbenchmark)
 
 # CTest
