--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,16 @@ file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 add_library(cppbenchmark ${HEADER_FILES} ${SOURCE_FILES})
 
 # Examples
+add_executable(cppbenchmark-example-atomic examples/atomic.cpp)
+target_link_libraries(cppbenchmark-example-atomic cppbenchmark)
 add_executable(cppbenchmark-example-containers examples/containers.cpp)
 target_link_libraries(cppbenchmark-example-containers cppbenchmark)
 add_executable(cppbenchmark-example-fwrite examples/fwrite.cpp)
 target_link_libraries(cppbenchmark-example-fwrite cppbenchmark)
+add_executable(cppbenchmark-example-mpmc examples/mpmc.cpp)
+target_link_libraries(cppbenchmark-example-mpmc cppbenchmark)
+add_executable(cppbenchmark-example-spsc examples/spsc.cpp)
+target_link_libraries(cppbenchmark-example-spsc cppbenchmark)
 add_executable(cppbenchmark-example-sort examples/sort.cpp)
 target_link_libraries(cppbenchmark-example-sort cppbenchmark)
 add_executable(cppbenchmark-example-threads examples/threads.cpp)
