Multiple producers / single consumer benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(cppbenchmark-example-fwrite examples/fwrite.cpp)
 target_link_libraries(cppbenchmark-example-fwrite cppbenchmark)
 add_executable(cppbenchmark-example-mpmc examples/mpmc.cpp)
 target_link_libraries(cppbenchmark-example-mpmc cppbenchmark)
+add_executable(cppbenchmark-example-mpsc examples/mpsc.cpp)
+target_link_libraries(cppbenchmark-example-mpsc cppbenchmark)
 add_executable(cppbenchmark-example-spsc examples/spsc.cpp)
 target_link_libraries(cppbenchmark-example-spsc cppbenchmark)
 add_executable(cppbenchmark-example-sort examples/sort.cpp)
