--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,31 +8,21 @@ include(cmake/SetCrtSecureWarningsOff.cmake)
 
 # Library
 include_directories(include)
-file(GLOB_RECURSE HEADER_FILES "source/*.h")
-file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
+file(GLOB_RECURSE HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/source/*.h")
+file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
 add_library(cppbenchmark ${HEADER_FILES} ${SOURCE_FILES})
 
 # Examples
-add_executable(cppbenchmark-example-atomic examples/atomic.cpp)
-target_link_libraries(cppbenchmark-example-atomic cppbenchmark)
-add_executable(cppbenchmark-example-containers examples/containers.cpp)
-target_link_libraries(cppbenchmark-example-containers cppbenchmark)
-add_executable(cppbenchmark-example-fwrite examples/fwrite.cpp)
-target_link_libraries(cppbenchmark-example-fwrite cppbenchmark)
-add_executable(cppbenchmark-example-mpmc examples/mpmc.cpp)
-target_link_libraries(cppbenchmark-example-mpmc cppbenchmark)
-add_executable(cppbenchmark-example-mpsc examples/mpsc.cpp)
-target_link_libraries(cppbenchmark-example-mpsc cppbenchmark)
-add_executable(cppbenchmark-example-spsc examples/spsc.cpp)
-target_link_libraries(cppbenchmark-example-spsc cppbenchmark)
-add_executable(cppbenchmark-example-sort examples/sort.cpp)
-target_link_libraries(cppbenchmark-example-sort cppbenchmark)
-add_executable(cppbenchmark-example-threads examples/threads.cpp)
-target_link_libraries(cppbenchmark-example-threads cppbenchmark)
+file(GLOB EXAMPLE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
+foreach(EXAMPLE_FILE ${EXAMPLE_FILES})
+  string(REGEX REPLACE "(.*)\\.cpp" "\\1" EXAMPLE_NAME ${EXAMPLE_FILE})
+  add_executable(cppbenchmark-example-${EXAMPLE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/examples/${EXAMPLE_FILE})
+  target_link_libraries(cppbenchmark-example-${EXAMPLE_NAME} cppbenchmark)
+endforeach()
 
 # Tests
-file(GLOB_RECURSE TESTS_HEADER_FILES "tests/*.h")
-file(GLOB_RECURSE TESTS_SOURCE_FILES "tests/*.cpp")
+file(GLOB_RECURSE TESTS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.h")
+file(GLOB_RECURSE TESTS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
 add_executable(cppbenchmark-tests ${TESTS_HEADER_FILES} ${TESTS_SOURCE_FILES})
 target_link_libraries(cppbenchmark-tests cppbenchmark)
 
