--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,12 @@ install(TARGETS ${INSTALL_TARGETS}
   RUNTIME DESTINATION "${PROJECT_SOURCE_DIR}/bin"
   LIBRARY DESTINATION "${PROJECT_SOURCE_DIR}/bin"
   ARCHIVE DESTINATION "${PROJECT_SOURCE_DIR}/bin")
+
+# Doxygen
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+  set(DOXYGEN "Doxygen")
+  project(${DOXYGEN})
+  add_custom_command(OUTPUT "Doxyfile" COMMAND ${DOXYGEN_EXECUTABLE} "${PROJECT_SOURCE_DIR}/documents/Doxyfile" WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/documents")
+  add_custom_target(${DOXYGEN} DEPENDS "Doxyfile")
+endif()
