--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "scripts"]
 	path = scripts
 	url = https://github.com/chronoxor/CppBuildScripts.git
+[submodule "cmake"]
+	path = cmake
+	url = https://github.com/chronoxor/CppCMakeScripts.git
