--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,15 @@ addons:
     - doxygen
     - graphviz
 
+before_install:
+  - echo $TRAVIS_OS_NAME
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install cmake; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install doxygen; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install graphviz; fi
+
 script: 
-- cd scripts
+- cd ./scripts
 - ./01-generate-Unix.sh
 - ./02-build-Unix.sh
 - ./03-tests.sh
