--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,19 +25,16 @@ init:
   - cmd: cmake --version
   - cmd: msbuild /version
 
-# Scripts to run before build
-before_build:
-  - cmd: cd ./scripts
-  - cmd: if "%platform%"=="x86" ./01-generate-VisualStudio-x32.bat
-  - cmd: if "%platform%"=="x64" ./01-generate-VisualStudio-x64.bat
-
 # Build scripts
 build_script:
-  - cmd: ./02-build-VisualStudio.bat
-  - cmd: ./03-tests.bat
-  - cmd: ./04-install-VisualStudio.bat
-  - cmd: ./05-doxygen-VisualStudio.bat
-  - cmd: ./06-clean.bat
+  - cmd: cd scripts
+  - cmd: if "%platform%"=="x86" 01-generate-VisualStudio-x32.bat
+  - cmd: if "%platform%"=="x64" 01-generate-VisualStudio-x64.bat
+  - cmd: 02-build-VisualStudio.bat
+  - cmd: 03-tests.bat
+  - cmd: 04-install-VisualStudio.bat
+  - cmd: 05-doxygen-VisualStudio.bat
+  - cmd: 06-clean.bat
 
 # Test scripts
 test: off
