--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ before_install:
 
 script: 
   - cd scripts
-  - 01-generate-Unix.sh
-  - 02-build-Unix.sh
-  - 03-tests.sh
-  - 04-install-Unix.sh
-  - 05-doxygen-Unix.sh
-  - 06-clean.sh
+  - ./01-generate-Unix.sh
+  - ./02-build-Unix.sh
+  - ./03-tests.sh
+  - ./04-install-Unix.sh
+  - ./05-doxygen-Unix.sh
+  - ./06-clean.sh
