--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,6 +6,16 @@ branches:
   only: 
     - master
 
+# Clone depth
+clone_depth: 5
+
+# Clone repository as zip archive
+shallow_clone: true
+
+# Including commits with 'build' comment
+only_commits:
+  message: build
+
 # Build platform, i.e. Win32 (instead of x86), x64, Any CPU. This setting is optional.
 platform: 
   - x86
